--- a/home.html
+++ b/home.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link type="text/css" rel="stylesheet" href="main.css" />
+
 </head>
 <body>
-    <div>
+    <div class="header">
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="courses.html">courses</a></li>
+            <li><a href="contacts.html">contracts</a></li>
+        </ul>
         <div>
             <h2>About me</h2>
             <p>
