--- a/tpsi_5a_24_25.html
+++ b/tpsi_5a_24_25.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TPSI 5</title>
+    <link type="text/css" rel="stylesheet" href="main.css" />
 </head>
 <body>
     <div>
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="courses.html">courses</a></li>
+            <li><a href="contacts.html">contracts</a></li>
+        </ul>
+
         <table>
             <thead>
                 <tr>
